--- a/docs/docs/classic-ml/deep-learning/pytorch/quickstart/quickstart-pytorch.ipynb
+++ b/docs/docs/classic-ml/deep-learning/pytorch/quickstart/quickstart-pytorch.ipynb
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -579,7 +579,7 @@
     "        evaluate(test_dataloader, model, loss_fn, metric_fn, epoch=0)\n",
     "\n",
     "    # Save the trained model to MLflow.\n",
-    "    mlflow.pytorch.log_model(model, name=\"model\")"
+    "    model_info = mlflow.pytorch.log_model(model, name=\"model\")"
    ]
   },
   {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -648,8 +648,7 @@
     }
    ],
    "source": [
-    "logged_model = f\"runs:/{run.info.run_id}/model\"\n",
-    "loaded_model = mlflow.pyfunc.load_model(logged_model)"
+    "loaded_model = mlflow.pyfunc.load_model(model_info.model_uri)"
    ]
   },
   {
