--- a/docs/docs/classic-ml/deployment/index.mdx
+++ b/docs/docs/classic-ml/deployment/index.mdx
@@ -121,5 +121,5 @@ Almost all functionalities available in MLflow deployment can also be accessed v
 
 ## FAQ
 
-If you encounter any dependency issues during model deployment, please refer to [Model Dependencies FAQ](/model/dependencies/#model-dependencies-troubleshooting)
+If you encounter any dependency issues during model deployment, please refer to [Model Dependencies FAQ](/ml/model/dependencies/#model-dependencies-troubleshooting)
 for guidance on how to troubleshoot and validate fixes.
