--- a/docs/docs/classic-ml/deployment/deploy-model-locally/index.mdx
+++ b/docs/docs/classic-ml/deployment/deploy-model-locally/index.mdx
@@ -19,7 +19,7 @@ first to understand the basic concepts of MLflow models and deployments.
 ## Deploying Inference Server
 
 Before deploying, you must have an MLflow Model. If you don't have one, you can create a sample scikit-learn model by following the [MLflow Tracking Quickstart](/ml/getting-started).
-Remember to note down the model URI, such as `runs:/<run_id>/<artifact_path>` (or `models:/<model_name>/<model_version>` if you registered the model in the [MLflow Model Registry](/ml/model-registry)).
+Remember to note down the model URI, such as `models:/<model_id>` (or `models:/<model_name>/<model_version>` if you registered the model in the [MLflow Model Registry](/ml/model-registry)).
 
 Once you have the model ready, deploying to a local server is straightforward. Use the <Link to="/api_reference/cli.html#mlflow-models-serve" target="_blank">mlflow models serve</Link> command for a one-step deployment.
 This command starts a local server that listens on the specified port and serves your model. Refer to the <Link to="/api_reference/cli.html#mlflow-models-serve" target="_blank">CLI reference</Link> for available options.
@@ -320,14 +320,14 @@ prediction on `input.csv` and outputs the results to `output.csv`.
 <Tabs>
   <TabItem default label="Bash" value="bash">
     ```bash
-    mlflow models predict -m runs:/<run_id>/model -i input.csv -o output.csv
+    mlflow models predict -m models:/<model_id> -i input.csv -o output.csv
     ```
   </TabItem>
   <TabItem label="Python" value="python">
     ```python
     import mlflow
 
-    model = mlflow.pyfunc.load_model("runs:/<run_id>/model")
+    model = mlflow.pyfunc.load_model("models:/<model_id>")
     predictions = model.predict(pd.read_csv("input.csv"))
     predictions.to_csv("output.csv")
     ```
