--- a/docs/docs/classic-ml/getting-started/intro-quickstart/index.mdx
+++ b/docs/docs/classic-ml/getting-started/intro-quickstart/index.mdx
@@ -55,7 +55,7 @@ To install the latest version of MLflow's release candidates for a given version
 pip install --pre mlflow
 
 # or install a specific rc version
-pip install mlflow==3.0.0rc2
+pip install mlflow==3.1.0rc0
 ```
 
 ## Step 2 - Start a Tracking Server
@@ -65,7 +65,7 @@ pip install mlflow==3.0.0rc2
 For details on options for using a managed MLflow Tracking Server, including how to create a Databricks Free Trial account with
 managed MLflow, [see the guide for tracking server options](/ml/getting-started/running-notebooks/).
 
-### (Optional) Run a local Tracking Server
+### Run a local Tracking Server
 
 We're going to start a local MLflow Tracking Server, which we will connect to for logging our data for this quickstart.
 From a terminal, run:
