Add the getting started content to the docs refactoring (#15918)
Signed-off-by: Ben Wilson <benjamin.wilson@databricks.com>

--- a/docs/docs/classic-ml/getting-started/registering-first-model/step1-register-model.mdx
+++ b/docs/docs/classic-ml/getting-started/registering-first-model/step1-register-model.mdx
@@ -80,3 +80,5 @@ Before moving on, let's highlight some important implementation notes.
   provide validation for our model inputs and outputs. The `input_example` in `log_model()`
   automatically infers and logs a signature. Again, we suggest using this implementation because
   it's concise.
+
+The next part of this tutorial centers on [Understanding Registered Models](/ml/getting-started/registering-first-model/step2-explore-registered-model) within the MLflow UI.
