--- a/docs/docs/classic-ml/getting-started/logging-first-model/step4-experiment-search.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step4-experiment-search.mdx
@@ -85,3 +85,5 @@ The returned results above are formatted for legibility. This return type is an 
 
 In the next section, we'll begin to use this experiment to log training data to runs that are associated with this experiment, introducing
 another aspect of both the MLflow APIs (the fluent API) and another part of the MLflow UI (the run information page).
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step5-synthetic-data) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
