--- a/docs/docs/classic-ml/getting-started/logging-first-model/step5-synthetic-data.mdx
+++ b/docs/docs/classic-ml/getting-started/logging-first-model/step5-synthetic-data.mdx
@@ -2,7 +2,7 @@
 sidebar_position: 5
 ---
 
-# Create a dataset about apples
+# Synthetic Data Creation
 
 In order to produce some meaningful data (and a model) for us to log to MLflow, we'll need a dataset.
 In the interests of sticking with our theme of modeling demand for produce sales, this data will
@@ -131,3 +131,5 @@ data[-20:]
 
 In the next section, we'll both use this generator for its output (the data set), and as an example
 for how to leverage MLflow Tracking as part of a prototyping phase for a project.
+
+You can now [continue to the next section](/ml/getting-started/logging-first-model/step6-logging-a-run) of the tutorial, or [return to the tutorial listing](/ml/getting-started/logging-first-model).
